--- a/oidc-with-identity-propagation/virtual-security-domain-to-domain/ejb/pom.xml
+++ b/oidc-with-identity-propagation/virtual-security-domain-to-domain/ejb/pom.xml
@@ -7,6 +7,7 @@
         <version>2.0.0.Alpha1-SNAPSHOT</version>
     </parent>
     <artifactId>virtual-security-domain-to-domain-ejb</artifactId>
+    <packaging>ejb</packaging>
 
     <dependencies>
         <dependency>
@@ -31,7 +32,7 @@
         <dependency>
             <groupId>org.wildfly.security.examples</groupId>
             <artifactId>ejb-basic-ejb</artifactId>
-            <type>ejb</type>
+            <type>ejb-client</type>
             <version>${project.version}</version>
         </dependency>
     </dependencies>
